refactor(elasticsearch): introduce coded runtime exceptions
Reduces complexity of the ClientFacade and makes sonar happy.